[package]
name = "melspecx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "melspecx"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]


[profile.dev]
opt-level = 1
debug = true


[dependencies]
byteorder = "1.5.0"
symphonia = { version = "0.5.4", features = [
    "mp3",
    "wav",
    "flac",
    "vorbis",
    "aac",
    "isomp4",
] }
numpy = { version = "0.24.0", optional = true }
pyo3 = { version = "0.24.2", features = ["extension-module"], optional = true }
rayon = "1.10.0"
image = "0.24.7"
ndarray = { version = "0.16.1", features = ["blas"] }
soundkit = "0.12.1"
itertools = "0.12.0"
num = "0.4.3"
colorgrad = "0.7.1"
wgpu = "24.0.3"
gpu-fft = "0.0.2"
bytemuck = "1.23.0"
cubecl = { version = "0.4.0", features = ["cuda", "wgpu"] }
cubecl-wgpu = "0.4.0"
rubato = "0.16.2"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
memmap2 = "0.9.5"

[dev-dependencies]
clap = "4.5.37"
clio = { version = "0.3.5", features = ["clap-parse"] }
