[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[project]
name = "melspecx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=1.24.4",
]
[tool.maturin]
features = ["pyo3/extension-module"]
