[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[project]
name = "melspecx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["halo>=0.0.31", "numpy>=1.24.4", "typer>=0.15.3"]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[project.scripts]
melspecx = "melspecx.cli:app"
librosa = "melspecx.librosa_cli:app"
